# ttbot_ws

./: .gitignore  .gitignore.save  README.md  plot_path.py
src/: check_tracking.py  monitor.py  monitor_mpc.py  monitor_stanley.py  plot_cte.py  plot_heading.py  speed.py  steer.py
src/FAST-LIVO2/config/: camera_real.yaml  camera_sim.yaml  ttbot_real.yaml  ttbot_sim.yaml
src/FAST-LIVO2/launch/: fast_livo_real.launch.py  fast_livo_sim.launch.py
src/FAST-LIVO2/rviz_cfg/: fast_livo2_sim.rviz
src/FAST-LIVO2/src/: LIVMapper.cpp
src/FAST_LIO/config/: velodyne.yaml  velodyne_sim.yaml
src/FAST_LIO/launch/: fast_lio_all.launch.py  fast_lio_real.launch.py
src/FAST_LIO/src/: laserMapping.cpp  preprocess.cpp
src/adis16488_driver/launch/: imu_system.launch.py
src/adis16488_driver/src/: adis16488_node.cpp
src/pcd2pgm/config/: pcd2pgm.yaml
src/qgc_bridge/qgc_bridge/: bridge_node.py
src/qgc_bridge_cpp/src/: bridge_node.cpp
src/ttbot_bringup/: CMakeLists.txt  package.xml
src/ttbot_bringup/launch/: feed_gps.py  mapping_real.launch.py  real.launch.py  real_enc.launch.py  sensor_data.launch.py  sim.launch.py
src/ttbot_controller/: CMakeLists.txt  package.xml  teleop.py
src/ttbot_controller/config/: gmpc_params.yaml  joy_config.yaml  joy_teleop.yaml  mpc_params.yaml
src/ttbot_controller/include/ttbot_controller/: gmpc_controller.hpp  mpc_controller.hpp  stanley_controller.hpp
src/ttbot_controller/launch/: gmpc.launch.py  gps_path.launch.py  joystick_teleop.launch.py  mpc.launch.py  path_publisher.launch.py  stanley.launch.py
src/ttbot_controller/path/: 1. generate_8.py  2. generate_o.py  3. generate_sq.py  8.csv  creat_uturn.py  o.csv  path.csv  path_8.csv  path_circle.csv  path_l.csv  path_right.csv  path_u.csv  path_uturn.csv  plot_path.py  sq.csv
src/ttbot_controller/scripts/: mpc_state_filter.py
src/ttbot_controller/src/: ackermann_controller.cpp  gmpc_controller.cpp  gps_path_publisher.cpp  mpc_controller.cpp  path_publisher.cpp  stamped_twist_mux.cpp  stanley_controller.cpp
src/ttbot_description/: CMakeLists.txt
src/ttbot_description/launch/: gazebo.launch.py
src/ttbot_description/urdf/: ttbot.urdf.xacro  ttbot_gazebo.xacro
src/ttbot_description/worlds/: gps_world.sdf  ttbot_colored_warehouse.sdf  ttbot_warehouse.sdf
src/ttbot_localization/: CMakeLists.txt  package.xml
src/ttbot_localization/config/: dual_ekf_ackermann.yaml  ekf.yaml  ekf_enc_sim.yaml  ekf_global.yaml  ekf_global_livo.yaml  ekf_global_sim.yaml  ekf_local_enc.yaml  ekf_local_livo.yaml  neo_m8p.yaml
src/ttbot_localization/launch/: global_localization.launch.py  gps.launch.py  local_localization.launch.py
src/ttbot_localization/src/: imu_republisher.cpp
src/ttbot_mapping/: CMakeLists.txt  package.xml
src/ttbot_mapping/config/: mapper_params.yaml  nav2_params.yaml
src/ttbot_mapping/launch/: amcl.launch.py  amcl_real.launch.py  map_server.launch.py  mapping.launch.py  pointcloud_to_laserscan.launch.py  slam_online_real.launch.py  slam_online_sim.py
src/ttbot_mapping/maps/: bk_map.pgm  bk_map.yaml  map_ttbot.yaml  my_map.pgm  my_map.yaml  my_map_real.pgm  my_map_real.yaml  my_map_test.pgm  my_map_test.yaml
src/ttbot_mapping/params/: mapper_params.yaml  nav2_params.yaml
src/ttbot_monitor/: calc_overall.py  check_tracking.py  plot_excute_time.py  plot_latency.py
src/ttbot_navigation/behavior_tree/: planner.xml  simple_navigation_w_replanning.xml
src/ttbot_navigation/config/: controller_server.yaml  planner_server.yaml
src/ttbot_navigation/launch/: navigation_real.launch.py
src/ttbot_planning/: CMakeLists.txt  global_planner_plugins.xml  package.xml
src/ttbot_planning/include/ttbot_planning/: a_star_planner.hpp  a_star_planner_new.hpp
src/ttbot_planning/src/: a_star_planner.cpp  a_star_planner_new.cpp
src/ttbot_planning/tools/: auto_goal_sender.py  generate_goals.py  path_evaluator.py
src/ttbot_sensors/: CMakeLists.txt  package.xml
src/ttbot_sensors/launch/: gps.launch.py  imu.launch.py  sensors.launch.py
src/ttbot_sensors/src/: adis16488_node.cpp
src/ttbot_viewer/: 0. plot_odom.py  10. tracking.py  11. data_logger.py  12. plotter.py  4. plot_compare.py  7. plot_overall_latency.py  8. speed.py  9. steer.py  gmpc_tracking.py  mpc_tracking.py
src/ttbot_viewer/paper/so8/gmpc/: mpc_traj.csv
src/ttbot_viewer/paper/so8/mpc/: mpc_traj.csv
src/ttbot_viewer/paper/so8/real/: gif.py  plot_8.py
src/ttbot_viewer/paper/so8/sim/: gmpc_ref.csv  gmpc_traj.csv  mpc_traj.csv  plot_8.py
src/ttbot_viewer/paper/vuong/gmpc/: mpc_traj_sq.csv
src/ttbot_viewer/paper/vuong/real/: gmpc_traj.csv  mpc_traj.csv  plot_sq.py
src/ttbot_viewer/paper/vuong/sim/: gmpc_ref.csv  gmpc_traj.csv  mpc_traj.csv  plot_sq.py
src/ublox_driver/launch/: gps.launch.py
